# pyspark_substrait

./: .gitmodules  README.md  environment.yaml  pyproject.toml  requirements.txt
src/sparktrait/substrait/: visit.py
tests/: test_pyspark.py
